convert to public API (#618)